# chasqui

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: environment.rs  folder.rs  http.rs  mod.rs  workspace.rs
src-tauri/src/core/: http_client.rs  mod.rs  models.rs  storage.rs
src-tauri/tests/: http_client_tests.rs
src/lib/components/: ApiList.svelte  DragInsertLine.svelte  FolderItem.svelte  JsonEditor.svelte  JsonViewer.svelte  NoRequestSelected.svelte  RequestEditor.svelte  ResponseStats.svelte  ResponseViewer.svelte  SavedApis.svelte  ThemeToggler.svelte
src/lib/constants/: http.constants.ts
src/lib/infra/: shortcuts.ts  tauri.ts
src/lib/layouts/: Header.svelte  LeftPanel.svelte  Sidebar.svelte
src/lib/services/: api.service.ts  environment.service.ts  folder.service.ts  request.service.ts  tauriBridge.ts  workspace.service.ts
src/lib/stores/: api.svelte.ts  drag.svelte.ts  environment.svelte.ts  exportModal.svelte.ts  folder.svelte.ts  history.svelte.ts  history.ts  importModal.svelte.ts  request.svelte.ts  request.ts  sidebar.svelte.ts  toast.svelte.ts  workspace.svelte.ts
src/lib/types/: export.ts  http.ts  import.ts  menu.ts
src/lib/ui/: ContextMenu.svelte  DataTable.svelte  EnvSelector.svelte  KeyValueEditor.svelte  Modal.svelte  ShortcutList.svelte  TabButton.svelte  ToastContainer.svelte  (+2 more)
src/routes/: +layout.ts  +page.svelte
test-server/: server.cjs
(+49 files in other folders)
