[package]
name = "chasqui"
version = "0.1.0"
description = "A simple and minimal api client open source alternative"
authors = ["Diego Salas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chasqui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
url = "2.5.7"
base64 = "0.22.1"

# Async runtime (needed for tests)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.6"
